<resources>
    <string name="app_name">Bancos</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Contraseña</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_banco">Banco</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="msg_cedula">Cedula</string>
    <string name="msg_nombre">Nombre</string>
    <string name="msg_correo">Correo</string>
    <string name="msg_telefono">Telefono</string>
    <string name="msg_ncuenta">Cuenta</string>
    <string name="msg_seguridad">Codigo de Seguridad</string>
    <string name="bt_agregar">Agregar Cuenta</string>
    <string name="bt_actualizar">Actualizar Cuenta</string>


    <string name="msg_agregado">Insertado con exito</string>
    <string name="msg_actualizado">Actualizado</string>
    <string name="menu_delete">Eliminar</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="msg_segurro_borrar">Seguro desea eliminarlo </string>


    <string name="id_web">108137802327-bqk4kde1cskqjdavdurgj4ha58ghggfj.apps.googleusercontent.com</string>




</resources>